# pktransfer

./: .gitignore  Dockerfile  Readme.md  build.sh  compile_sol.sh  docker-compose.yaml  run.sh  run_ganache.sh  run_sim.sh
client/: Dockerfile  requirements.txt  test.py
pktransfer/: Dockerfile  Dockerfile.tmp  Makefile  build_run.sh  demo.py  output  run_db.sh  run_demo.sh  test.py  tmp
pktransfer/app/: Cargo.toml  build.rs
pktransfer/app/src/: main.rs
pktransfer/enclave/: Cargo.toml  Enclave.edl  Makefile  Xargo.toml
pktransfer/enclave/src/: crypto.rs  data.rs  lib.rs  merkletree.rs  time.rs
pktransfer/solidity/: PKtransfercancel.sol
pktransfer/solidity/openzeppelin-contracts/contracts/utils/cryptography/: ECDSA.sol
sidechannel/: .dockerignore  Dockerfile  build_and_run_aesm_docker.sh  build_and_run_sample_docker.sh  build_compose_run.sh
sidechannel/python/: analyze.py  source_ex.py  source_no_side.py  source_side_ex.py
sidechannel/sidechannel/: .Makefile  Dockerfile  build_and_run_aesm_docker.sh  docker-compose.yml
sidechannel/sidechannel/App/: App.cpp
sidechannel/sidechannel/Enclave/: CMakeCache.txt  CMakeLists.txt  Enclave.cpp  Enclave.edl  Enclave.h  Makefile  cmake_install.cmake
