[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2018"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
rouille = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.123"
serde_cbor = "0.10"
base64 = "0.13.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_types" }
sgx_urts = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_urts" }
sgx_tseal = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tseal" }
