[package]
name = "Pktransferenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "pktransferenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
http_req = { git = "https://github.com/mesalock-linux/http_req-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
ring = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5"  }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }



[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git",  features = ["net"] }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_alloc" }
sgx_build_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_build_helper" }
sgx_cov = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_cov" }
sgx_crypto_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_crypto_helper" }
sgx_libc = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_libc" }
sgx_rand = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_rand" }
sgx_rand_derive = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_rand_derive" }
sgx_serialize = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize" }
sgx_serialize_derive = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tcrypto_helper" }
sgx_tdh = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tdh" }
sgx_tkey_exchange = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tprotected_fs" }
sgx_trts = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_trts" }
sgx_tse = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tse" }
sgx_tseal = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tseal" }
sgx_tstd = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tstd" }
sgx_tunittest = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_tunittest" }
sgx_types = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_types" }
sgx_ucrypto = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_ucrypto" }
sgx_unwind = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_unwind" }
sgx_urts = { path = "../../../incubator-teaclave-sgx-sdk-master/sgx_urts" }
